UI/src/css/utilities/display.css
/*
----------------------------------------------------------------------------
Visually hide content but make it available to screen readers.
----------------------------------------------------------------------------
*/
.visually-hidden {
    &:not(:focus):not(:active) {
        block-size: 1px;
        clip-path: inset(50%);
        inline-size: 1px;
        overflow: hidden;
        position: absolute;
        white-space: nowrap;
    }
}

/*
----------------------------------------------------------------------------
Display.

The CSS utility class behaves the same as the HTML attribute.
----------------------------------------------------------------------------
*/
:where(.hidden, [hidden]) {
    display: none;
}

:where(.hidden-filter, .hidden-rule) {
    display: none;
}

.unavailable {
    display: none;
}

